removed div element from footer as no longer needed. added styling to header nav element to remove spacing on the left of the hehe border

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ nav {
     top: 100%;
     background-color: whitesmoke;
     width: 100%;
+    left: 0;
 }
 
 #nav-toggle:checked~nav {
@@ -120,11 +121,11 @@ footer a {
     text-decoration: none;
     color: black;
 }
-    
+
 #social-media-links {
     display: flex;
     justify-content: space-evenly;
-    list-style: none; 
+    list-style: none;
     padding-top: 2%;
     padding-bottom: 2%;
 }
@@ -139,8 +140,10 @@ h4 {
     text-decoration: underline;
     /*font-size: larger;*/
 }
+
 /* styling for larger screens */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
@@ -167,13 +170,14 @@ h4 {
 }
 
 @media screen and (min-width: 992px) {
+
     /* header */
     h1 {
         font-size: 250%;
     }
 
     nav li {
-       margin-right: 2%;
+        margin-right: 2%;
     }
 
     #main-menu a:hover {
@@ -207,7 +211,6 @@ h4 {
     .active2 {
         font-size: 120%;
     }
-    
-   
-}
 
+
+}
